<resources>
    <string name="app_name">LearningAssistant</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email">Почта</string>
    <string name="Password">Пароль</string>
    <string name="Forgot_your_password">Забыли пароль?</string>
    <string name="LogIn">Войти</string>
    <string name="Do_not_have_an_account">Нет аккаунта?</string>
    <string name="Registration">Регистарция</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Main">Главная</string>
    <string name="Materials">Материалы</string>
    <string name="Quiz">Quiz</string>
    <string name="Subjects">Предметы</string>
    <string name="Profile">Профиль</string>
    <string name="search">поиск</string>
    <string name="Exit">выйти</string>
    <string name="set_filters">Задать фильтры</string>
    <string name="title_activity_theory">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="action_settings">Settings</string>
    <string name="in_develop">В разработке</string>
    <string name="Help">Помощь</string>


    <string name="stop_text_1">Lorem ipsum dolor sit amet consectetur adipiscing elit parturient neque sodales aliquam, facilisi torquent erat quam semper conubia sem cras tortor. Leo urna tempus fames cras finibus interdum praesent ullamcorper sollicitudin volutpat, efficitur mi iaculis nunc lacus aptent eu enim arcu, metus sit velit placerat dignissim molestie parturient in imperdiet. Conubia feugiat tortor ligula himenaeos ut metus malesuada, consectetur rutrum aliquet fusce justo arcu, lacinia bibendum curabitur tempor tristique lorem. Ad euismod amet torquent porttitor erat venenatis inceptos placerat ullamcorper risus, nibh primis habitasse facilisis maecenas volutpat rhoncus velit id, sollicitudin elit tristique sapien fermentum ligula duis efficitur cras. Consequat mi duis efficitur amet integer congue, cras ridiculus nisi rutrum mattis primis arcu, cursus sollicitudin purus ornare morbi. Enim a tempus porta convallis curae sagittis hendrerit per, posuere aenean hac nascetur euismod venenatis ultrices, elementum diam egestas conubia magnis pulvinar himenaeos. Ultricies ad nisl commodo libero dis turpis duis justo, venenatis sagittis fringilla ligula ac elementum ridiculus neque sodales, magnis in euismod urna tortor nascetur laoreet. Amet dictum enim senectus fames scelerisque habitasse maximus mauris nisl, euismod facilisi viverra arcu leo in aliquam egestas, ante posuere placerat iaculis cras nisi vestibulum tempor. Suspendisse nam etiam dis dolor adipiscing condimentum posuere ex malesuada dapibus mattis ad lacus morbi molestie phasellus odio, platea sit litora viverra fermentum aliquet potenti penatibus mollis ipsum lobortis iaculis efficitur interdum duis. Hendrerit torquent imperdiet semper posuere pellentesque finibus sociosqu vivamus venenatis, tempor maximus cras urna quisque mauris fames. Facilisi taciti dapibus faucibus id eu nunc, ornare parturient arcu etiam metus, elit dignissim conubia maximus turpis. Feugiat duis nascetur a sagittis consectetur enim velit, porta arcu semper dictum pharetra mollis vestibulum, scelerisque odio dis magna sapien sodales. Nulla maecenas lectus est egestas dolor id fusce faucibus viverra nostra, facilisi metus risus phasellus diam consectetur commodo non odio, sed inceptos finibus per donec tempor justo integer dis. Nostra curabitur urna tempor aptent viverra tellus lobortis sollicitudin hac, porta montes luctus felis vitae est rutrum. Ultrices risus conubia aliquam finibus ante nascetur integer, inceptos ad semper vivamus justo id class, porttitor parturient rutrum magna erat lectus. Commodo odio suspendisse facilisi vestibulum turpis parturient elit conubia, non mi placerat lacinia blandit rutrum laoreet, nunc convallis nascetur enim eleifend fames felis. Senectus netus praesent nibh auctor magna aliquet lacus class rhoncus, conubia ipsum sollicitudin potenti mi neque curae nunc parturient sodales, consectetur laoreet sapien taciti facilisis scelerisque malesuada per. Nisl montes lectus morbi vulputate est cursus lobortis feugiat himenaeos, tempor purus massa aptent praesent felis adipiscing quam, inceptos enim dis venenatis malesuada non molestie finibus. Conubia ex turpis class potenti tristique purus rutrum vel convallis nascetur torquent mattis mi, risus tempor montes pharetra donec arcu magna morbi sollicitudin suspendisse eros facilisis. Vivamus tempus phasellus rutrum nisi mi accumsan eleifend etiam integer purus, ornare leo habitant est facilisi himenaeos hac laoreet curae dapibus, felis sagittis rhoncus suspendisse inceptos scelerisque viverra lorem lacus.</string>
    <string name="stop_text_2">В отчетном периоде предприятие выпустило изделий А в количестве 200 шт., изделий Б — 300 шт. Цена изделия А 1800 руб., изделия Б — 2 580 руб.

Стоимость услуг промышленного характера, оказанных сторонним предприятиям 37 500 руб. Остаток НЭП на начало года 53 000 руб., на конец года 75 000 руб.

Наряду с основной продукцией произведена тара на сумму 12 000 руб., в том числе для отпуска на сторону на сумму 8 000 руб.

Определить: объем товарной, валовой и реализованной продукции.</string>
</resources>