<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerAuth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginActivity">

    <ImageView
        android:id="@+id/ivAuthBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/png_auth_gradient"
        app:layout_constraintDimensionRatio="W,1:1.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAuthLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_splash_no_background"
        app:layout_constraintBottom_toBottomOf="@+id/ivAuthBg"
        app:layout_constraintEnd_toEndOf="@+id/ivAuthBg"
        app:layout_constraintStart_toStartOf="@+id/ivAuthBg"
        app:layout_constraintTop_toTopOf="@+id/ivAuthBg" />

    <LinearLayout
        android:id="@+id/containerFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAuthBg"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Авторизация"
            android:theme="@style/h1" />

        <EditText
            android:id="@+id/etLoginAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />


        <EditText
            android:id="@+id/etPasswordAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvBtnAuthForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Forgot_your_password"
        android:theme="@style/BlueTextButton"
        app:layout_constraintBottom_toTopOf="@+id/footerAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAuthEnter"
        />

    <Button
        android:id="@+id/btnAuthEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="116dp"
        android:text="@string/LogIn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerFields"
        />

    <RelativeLayout
        android:id="@+id/footerAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerFields">

        <TextView
            android:id="@+id/tvAuthNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do_not_have_an_account" />


        <TextView
            android:id="@+id/tvBtnAuthRegHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/tvAuthNoAccount"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Registration"
            android:theme="@style/BlueTextButton" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>